--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Author" content="Jorge Andres Rojas Bautista">
-    <link rel="stylesheet" href="styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Author" content="Jorge Andres Rojas Bautista" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="./js/giphy.js"></script>
     <script src="./js/main.js"></script>
     <title>Welcome to gif.OS</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="windowTitle">
+        <p class="windowText">
+          ¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.////// Número
+          de visitas: 12.765.803
+        </p>
+      </div>
+    </header>
+    <nav class="navbar">
+      <div class="brand">
+        <img src="./assets/gifOF_logo.png" alt="guifos logo" />
+      </div>
+      <div class="groupButtonsNav">
+        <button class="navButton">Crear Guifos</button>
+        <div class="themeButton">
+          <button class="navButton main">Elegir tema</button>
+          <button class="navButton close"><img src="./assets/dropdown.svg" alt="desplegar menu"></button>
+        </div>
+        <a class="navLink" href="/html/misGifs.html"><span class="underline">M</span>is Guifos</a>
+      </div>
+        
+    </nav>
+    <div class="themesList">
+      <ul class="themeList">
+        <li class="themeItem"><button class="selectedTheme"><span class="none">S</span>ailor Day</button></li>
+        <li class="themeItem"><button class="selectedTheme"><span class="none">S</span>ailor Night</button></li>
+      </ul>
+    </div>
+    <section class="searchBar">
+      <div class="windowTitle"><p class="windowText">Buscar</p></div>
+      <input
+        type="text"
+        name="searchBar"
+        id="userSearch"
+        placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
+      />
+      <input
+        id="submit"
+        type="button"
+        value="Buscar"
+        class="searchButton"
+        onclick="SearchGifs(document.getElementById('userSearch').value)"
+      />
+    </section>
+    <section class="results">
+      <div class="suggest">
+        <p class="suggestText">Hoy te sugermios:</p>
+      </div>
+      <div class="tendences">
+        <p class="tendencesText">Tendencias:</p>
+      </div>
+    </section>
+  </body>
 </html>
