3/22/2020 Biblioteca manejo de url

--- a/html/crearGif.html
+++ b/html/crearGif.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Author" content="Jorge Andres Rojas Bautista">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/crearGifStyles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Author" content="Jorge Andres Rojas Bautista" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/crearGifs/crearGifStyles.css">
     <title>Crea tu guif</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="windowTitle">
+        <p class="windowText">
+          ¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.////// Número
+          de visitas: 12.765.803
+        </p>
+      </div>
+    </header>
+    <nav class="navbar">
+      <div class="brand">
+        <a href="../index.html"
+          ><img src="../assets/arrow.svg" alt="go back"><img src="../assets/gifOF_logo.png" alt="guifos logo"
+        /></a>
+      </div>
+      <div class="groupButtonsNav">
+        <button class="navButton">Crear Guifos</button>
+        <div class="themeButton">
+          <button class="navButton main">Elegir tema</button>
+          <button class="navButton close">
+            <img src="../assets/dropdown.svg" alt="desplegar menu" />
+          </button>
+          <div class="themesList">
+            <ul class="themeList">
+              <li class="themeItem">
+                <button class="selectedTheme">
+                  <span class="none">S</span>ailor Day
+                </button>
+              </li>
+              <li class="themeItem">
+                <button class="selectedTheme">
+                  <span class="none">S</span>ailor Night
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <a class="navLink" href="/html/misGifs.html"
+          ><span class="underline">M</span>is Guifos</a
+        >
+      </div>
+    </nav>
+  </body>
 </html>
