--- a/html/crearGif.html
+++ b/html/crearGif.html
@@ -50,5 +50,11 @@
         >
       </div>
     </nav>
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js"
+    type="text/javascript"
+  ></script>
+  <script src="./js/giphy.js"></script>
+  <script src="./js/main.js"></script>
   </body>
 </html>
