--- a/index.html
+++ b/index.html
@@ -28,11 +28,21 @@
           ><button class="navButton">Crear Guifos</button></a
         >
         <div class="themeButton">
-          <button class="navButton main">Elegir tema</button>
-          <button class="navButton close">
+          <button
+            id="themeButton"
+            class="navButton main"
+            onclick="OpenThemeList()"
+          >
+            Elegir tema
+          </button>
+          <button
+            id="themeButtonShort"
+            class="navButton close"
+            onclick="OpenThemeList()"
+          >
             <img src="./assets/dropdown.svg" alt="desplegar menu" />
           </button>
-          <div class="themesList">
+          <div class="themesList" id="themesList">
             <ul class="themeList">
               <li class="themeItem">
                 <button class="selectedTheme">
@@ -72,6 +82,7 @@
           <img class="searchIcon" src="./assets/lupa.svg" alt="buscar" /> Buscar
         </button>
       </div>
+      <div id="tagButtons"></div>
       <div class="searchOptions">
         <button class="optionSearch selectedSearch">
           Resultado de búsqueda sugerido
@@ -87,20 +98,23 @@
         </div>
         <div class="gifsSpace" id="suggestGifs"></div>
       </div>
-     <div id="tendencesArea">
-      <div class="tendences">
-        <p class="tendencesText">Tendencias:</p>
+      <div id="tendencesArea">
+        <div class="tendences">
+          <p class="tendencesText">Tendencias:</p>
+        </div>
+        <div class="gifsSpace" id="tendencesGifs"></div>
       </div>
-      <div class="gifsSpace" id="tendencesGifs"></div>
-     </div>
       <div id="searchArea">
         <div class="searchResults">
-          <p class="searchText"><span class="searchText"></span>(resultados)</p>
+          <p class="searchText"><span id="searchedText"></span> (resultados)</p>
         </div>
         <div class="gifsSpace" id="resultsGifs"></div>
-      </div>  
-      
+      </div>
     </section>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js"
+      type="text/javascript"
+    ></script>
     <script src="./js/giphy.js"></script>
     <script src="./js/main.js"></script>
   </body>
