--- a/html/crearGif.html
+++ b/html/crearGif.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Jorge Andres Rojas Bautista" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/crearGifs/crearGifStyles.css">
+    <link rel="stylesheet" href="../styles/styleDay.css">
+    <link rel="stylesheet" href="../styles/crearGifs/crearGifStyles.css" />
     <title>Crea tu guif</title>
   </head>
   <body>
@@ -20,7 +20,9 @@
     <nav class="navbar">
       <div class="brand">
         <a href="../index.html"
-          ><img src="../assets/arrow.svg" alt="go back"><img src="../assets/gifOF_logo.png" alt="guifos logo"
+          ><img src="../assets/arrow.svg" alt="go back"/><img
+            src="../assets/gifOF_logo.png"
+            alt="guifos logo"
         /></a>
       </div>
       <div class="groupButtonsNav">
@@ -50,11 +52,187 @@
         >
       </div>
     </nav>
+    <section class="recordGif" id="recordGif">
+      <div class="confirmGif">
+        <div class="windowTitle">
+          <p class="windowText">
+            Crear Guifos
+          </p>
+        </div>
+        <div class="windowImg">
+          <img src="../assets/windowImg.png" alt="windowImg" />
+        </div>
+        <div class="descriptionGif">
+          <ul class="itemsList">
+            <li class="item bold main">Aquí podrás crear tus propios guifos</li>
+            <li class="item">
+              Crear tu <span class="bold">guifo</span> es muy fácil, graba
+              cualquier imagen con tu cámara y obtén guifos personalizados. Los
+              pasos para crear tu guifo son:
+            </li>
+            <li class="item">
+              <span class="bold">1)</span> Dar permisos de acceso a la cámara
+              (sólo por el tiempo de uso)
+            </li>
+            <li class="item">
+              <span class="bold">2)</span> Capturar tu momento guifo
+            </li>
+            <li class="item">
+              <span class="bold">3)</span> Revisar el momento
+            </li>
+            <li class="item">
+              <span class="bold">4)</span> Listo para subir y compartir!
+            </li>
+            <li class="item">
+              ¿Quieres comenzar a crear tu
+              <span class="bold">guifo</span> ahora?
+            </li>
+          </ul>
+        </div>
+        <div class="actions">
+          <button
+            class="cancelGif"
+            id="cancelGif"
+            onclick="CancelarGrabacion()"
+          >
+            Cancelar
+          </button>
+          <button class="beginGif" id="beginGif" onclick="AceptarGrabacion()">
+            Comenzar
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="recordGifWindow" id="recordGifWindow">
+      <div class="windowTitle">
+        <p class="windowText">
+          Un Chequeo Antes de Empezar
+        </p>
+        <button class="closeWindow"></button>
+      </div>
+      <div class="gifs">
+        <div class="showVideo">
+          <video id="myVideo" autoplay></video>
+          <img
+            src="../../assets/preview.gif"
+            id="videoGuardado"
+            class="video dinamico"
+            alt=""
+          />
+          <div class="uploading" id="uploading">
+            <div class="globeImg">
+              <img src="../assets/globe_img.png" alt="globe">
+            </div>
+            <p class="bold">Estamos subiendo tu guifo...</p>
+            <img class="loadingImg" src="../assets/loading.gif" alt="loading">
+            <div class="uploadProgress" id="uploadProgress"></div>
+            <p class="litText">Tiempo restante: <span class="line-through">38 años</span>  algunos minutos</p>
+          </div>
+        </div>
+        <div class="videoActions" id="videoActions">
+          <p class="succesGif bold">Guifo creado con éxito</p>
+          <button
+            id="copyGif"
+            class="gifButtons"
+            onclick="CopiarEnlaceGrabacion()"
+          >
+            Copiar Enlace Guifo
+          </button>
+          <button
+            id="downloadGif"
+            class="gifButtons"
+            onclick="DescargarGrabacion()"
+          >
+            Descargar Guifo
+          </button>
+        </div>
+      </div>
+      <div class="actions">
+        <div class="captureGif" id="captureGif">
+          <button
+            class="startGif icon"
+            id="startGif"
+            onclick="IniciarGrabacion()"
+          >
+            <img src="../assets/camera.svg" alt="capture" />
+          </button>
+          <button
+            class="startGif text"
+            id="startGif"
+            onclick="IniciarGrabacion()"
+          >
+            Capturar
+          </button>
+        </div>
+        <div class="recordingGif" id="recordingGif">
+          <input type="text" id="timer" />
+          <div class="capButton">
+            <button class="endGif icon" id="endGif" onclick="ParaGrabacion()">
+              <img src="../assets/recording.svg" alt="recording" />
+            </button>
+            <button class="endGif text" id="endGif" onclick="ParaGrabacion()">
+              Listo
+            </button>
+          </div>
+        </div>
+
+        <div class="forwardGif" id="forwardGif">
+          <div class="progressVar">
+            <input type="text" id="timerFinish" />
+            <button id="forward" onclick="ReproducirGrabacion()">
+              <img src="../assets/forward.svg" alt="forward" />
+            </button>
+            <div class="forwardView" id="forwardView"></div>
+          </div>
+
+          <div class="groupButtons">
+            <button
+              class="repeatGif"
+              id="repeatGif"
+              onclick="RepetirGrabacion()"
+            >
+              Repetir Caputra
+            </button>
+            <button class="uploadGif" id="uploadGif" onclick="SubirGrabacion()">
+              Subir Guifo
+            </button>
+          </div>
+        </div>
+        <div class="cancelAction" id="cancelAction">
+          <button
+            class="cancelUpload"
+            id="cancelUploadGif"
+            onclick="CancelarSubida()"
+          >
+            Cancelar
+          </button>
+        </div>
+        <div class="finishAction" id="finishAction">
+          <button
+            class="finishGif"
+            id="finishGif"
+            onclick="TerminarGrabacion()"
+          >
+            Listo
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="results">
+      <div id="misGifsArea">
+        <div class="misGifsResults">
+          <p class="misGifsText">Mis guifos</p>
+        </div>
+        <div class="gifsSpace" id="misGifs"></div>
+      </div>
+    </section>
+    <script src="../js/progressbar.min.js"></script>
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js"
-    type="text/javascript"
-  ></script>
-  <script src="./js/giphy.js"></script>
-  <script src="./js/main.js"></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js"
+      type="text/javascript"
+    ></script>
+    <script src="../js/giphy.js"></script>
+    <script src="../js/recorder.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
