--- a/html/crearGif.html
+++ b/html/crearGif.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Jorge Andres Rojas Bautista" />
-    <link rel="stylesheet" href="../styles/styleDay.css">
-    <link rel="stylesheet" href="../styles/crearGifs/crearGifStyles.css" />
+    <link id="themeStlye" rel="stylesheet" href="../styles/styleDay.css">
     <title>Crea tu guif</title>
   </head>
   <body>
@@ -19,29 +18,35 @@
     </header>
     <nav class="navbar">
       <div class="brand">
-        <a href="../index.html"
-          ><img src="../assets/arrow.svg" alt="go back"/><img
-            src="../assets/gifOF_logo.png"
-            alt="guifos logo"
-        /></a>
+        <a href="../index.html"></a>
       </div>
       <div class="groupButtonsNav">
         <button class="navButton">Crear Guifos</button>
         <div class="themeButton">
-          <button class="navButton main">Elegir tema</button>
-          <button class="navButton close">
-            <img src="../assets/dropdown.svg" alt="desplegar menu" />
+          <button
+            id="themeButton"
+            class="navButton main"
+            onclick="OpenCloseThemeList()"
+          >
+            Elegir tema
           </button>
-          <div class="themesList">
+          <button
+          id="themeButtonShort"
+          class="navButton close"
+          onclick="OpenCloseThemeList()"
+        >
+          <img src="../assets/dropdown.svg" alt="desplegar menu" />
+        </button>
+          <div class="themesList" id="themesList">
             <ul class="themeList">
               <li class="themeItem">
-                <button class="selectedTheme">
-                  <span class="none">S</span>ailor Day
+                <button class="selectedTheme" id="buttonDay" onclick="SetStyle('Day')">
+                  <span id="sDay" class="none">S</span>ailor Day
                 </button>
               </li>
               <li class="themeItem">
-                <button class="selectedTheme">
-                  <span class="none">S</span>ailor Night
+                <button class="selectedTheme" id="buttonNight" onclick="SetStyle('Night')">
+                  <span id="sNight" class="none">S</span>ailor Night
                 </button>
               </li>
             </ul>
