--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Author" content="Jorge Andres Rojas Bautista" />
     <link id="themeStlye" rel="stylesheet" href="./styles/styleDay.css">
-
     <title>Welcome to gif.OS</title>
   </head>
   <body>
@@ -19,11 +18,11 @@
     </header>
     <nav class="navbar">
       <div class="brand">
-        <a href="../index.html"></a>
+        <a href="./index.html"></a>
       </div>
       <div class="groupButtonsNav">
         <!-- * Boton Crear gifs * -->
-        <a href="./html/crearGif.html"
+        <a href="./crearGif.html"
           ><button class="navButton">Crear Guifos</button></a
         >
         <div class="themeButton">
@@ -59,7 +58,7 @@
             </ul>
           </div>
         </div>
-        <a class="navLink" href="/html/misGifs.html"
+        <a class="navLink" href="./misGifs.html"
           ><span class="underline">M</span>is Guifos</a
         >
       </div>
